Color toggling works on the current editable row.
The user can edit the color of the squares on each row that is currently
editable in order to indicate exactly what outcome they got.

--- a/style.css
+++ b/style.css
@@ -40,3 +40,18 @@ div.row {
   justify-content: space-between;
   align-items:center;
 }
+
+div.grey {
+  background-color: #3A3A3C;
+  border: none;
+}
+
+div.yellow {
+  background-color: #B59F3B;
+  border: none;
+}
+
+div.green {
+  background-color: #538D4E;
+  border: none;
+}
