--- a/style.css
+++ b/style.css
@@ -43,7 +43,12 @@ div.tile {
 div.row {
   display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
+  width: 100%;
+}
+
+div.row.shake {
+  animation: shake 0.25s ease-in-out;
 }
 
 div.grey {
@@ -59,4 +64,82 @@ div.yellow {
 div.green {
   background-color: #538D4E;
   border: none;
+}
+
+div.tile.rotate {
+  animation: rotate 0.5s linear;
+}
+
+div.tile.type {
+  animation: type 0.05s linear;
+}
+
+div.tile.hasLetter {
+  border-color: gray;
+}
+
+@keyframes type {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(90deg);
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+@keyframes shake {
+  8.3% {
+    transform: translateX(0px);
+  }
+  16.6% {
+    transform: translateX(7px);
+  }
+  25% {
+    transform: translateX(0px);
+  }
+  25%{
+    transform: translateX(-7px);
+  }
+  33.3% {
+    transform: translateX(0px);
+  }  
+  41.6% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(7px);
+  }
+  58.3% {
+    transform: translateX(0px);
+  }
+  66.6%{
+    transform: translateX(-7px);
+  }
+  75% {
+    transform: translateX(0px);
+  }  
+  83.3% {
+    transform: translateX(0px);
+  }
+  91.6% {
+    transform: translateX(7px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
