Fixes some issues with correct word identification.
The logic behind duplicate letters needed to be modified slightly for
the case that a gray letter came before a green tile of the same letter.

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ div.tile.hasLetter {
   border-color: gray;
 }
 
+div.tile.suggestion {
+  color: rgba(169, 169, 169, 0.4);
+}
+
 @keyframes type {
   0% {
     transform: scale(1);
