--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
+@font-face {
+  font-family: Karnak;
+  src: url(./KarnakPro-CondensedBlack.otf) format("opentype");
+}
+
 body {
   background-color: black;
   margin: 0;
   font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 main {
   display: flex;
-  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -19,6 +27,11 @@ div.board {
   padding: 10px;
   height: 400px;
   width: 330px;
+}
+
+div.keyboard {
+  height: 225px;
+  background-color: black;
 }
 
 div.tile {
@@ -80,6 +93,46 @@ div.tile.hasLetter {
 
 div.tile.suggestion {
   color: rgba(169, 169, 169, 0.4);
+}
+
+div.tile.bounce {
+  animation: bounce .3s ease-in-out;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+  padding: 8px 16px;
+  color: white;
+}
+
+div.title {
+  font-family: 'Karnak', sans-serif;
+  color: white;
+  /* font-weight: 700; */
+  font-size: 2.5em;
+  line-height: 100%;
+  letter-spacing: 0.01em;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  42% {
+    transform: translateY(-30px);
+  }
+  50% {
+    transform: translateY(-35px);
+  }
+  58% {
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: translateY(-0px);
+  }
 }
 
 @keyframes type {
