--- a/style.css
+++ b/style.css
@@ -29,6 +29,28 @@ div.board {
   width: 330px;
 }
 
+div.error {
+  height: 50px;
+  width: 175px;
+  border-radius: 5px;
+  background-color: white;
+  position: absolute;
+  top: 100px;
+  visibility: hidden;
+  z-index: 100;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+  font-weight: bold;
+  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
+div.error.show {
+  animation: appear 1.5s linear;
+}
+
 div.keyboard {
   height: 225px;
   background-color: black;
@@ -115,6 +137,19 @@ div.title {
   font-size: 2.5em;
   line-height: 100%;
   letter-spacing: 0.01em;
+}
+
+@keyframes appear {
+  0% {
+    visibility: visible;
+  }
+  80% {
+    opacity: 100%;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 15%;
+  }
 }
 
 @keyframes bounce {
