Adds a media query to hide word menu for small screens.
The temporary fix for the word suggestions menu overlap issue is to
use a media query to completely hide these elements when the screen
gets too small. This should be fixed later with a suggestion menu that
takes up the entirety of the device width.

--- a/style.css
+++ b/style.css
@@ -358,6 +358,17 @@ div.title {
   width: calc(5 * var(--block-size) + 4 * var(--block-space));
 }
 
+/* Media query to hide the word suggestions menu. */
+@media only screen and (max-width: 900px) {
+  .menu-left {
+    display: none;
+    visibility: hidden;
+  }
+  .blocks {
+    visibility: hidden;
+  }
+}
+
 @keyframes blur {
   0% {
     filter: brightness(100%);
