Adds a short 'ripple' animation to show new suggestions.
When new suggestions are added to the left menu, a small and subtle
ripple effect is displayed in order to indicate that the suggestions
have been updated based on the user's last entered word.

--- a/style.css
+++ b/style.css
@@ -193,7 +193,8 @@ div.tile.rotate {
   animation: rotate var(--rotation-length) linear;
 }
 
-div.tile.type {
+div.tile.type,
+div.block-text.type {
   animation: type var(--pulse-length) linear;
 }
 
